--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mongo-update",
   "version": "0.0.1",
-  "description": "Get object diffs as MongoDB update queries",
+  "description": "Diff two objects and return a MongoDB update query",
   "main": "index.js",
   "scripts": {
     "test": "make test"
